# MESH

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  clang-format  config.mk  cppcheck  test-astar.py
src/: connection.hpp  main.cpp  packet.cpp  packet.hpp  types.hpp  utils.hpp
src/local/: astar.cpp  event.hpp  state.cpp  state.hpp
src/net/: .gitignore  connection.hpp  ffi.cpp  ffi.hpp  packet.cpp  packet.hpp  types.hpp
src/utils/: int.hpp  types.hpp  utils.hpp
